syntax = "proto3";

package food.v1;


option go_package = "github.com/Casper-Mars/cloud-restaurant/api/food/v1;v1";

message ListFoodByIdReq {
    repeated uint64 id = 1;
}

message AddFoodReq {
    string name = 1;
    uint32 price = 2;
}

message UpdateFoodReq {
    uint64 id = 1;
    string name = 2;
    uint32 price = 3;

}

message FoodModifyResp {
    uint64 id = 1;
}



message FoodListResp {
    message FoodItem {
        uint64 id = 1;
        string name = 2;
        uint32 price = 3;
    }
    repeated FoodItem items = 1;
}

service Food {
    rpc Add(AddFoodReq) returns (FoodModifyResp);
    rpc ListByIds(ListFoodByIdReq) returns (FoodListResp);
}









